<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/guide_left"
        app:layout_constraintGuide_begin="20dp"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/guide_right"
        app:layout_constraintGuide_end="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sumButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_left"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/plus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/minusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toEndOf="@+id/sumButton"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/minus" />

    <com.google.android.material.button.MaterialButton
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sumButton"
        android:id="@+id/divButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/div" />

    <com.google.android.material.button.MaterialButton
        app:layout_constraintStart_toEndOf="@id/divButton"
        app:layout_constraintTop_toBottomOf="@id/minusButton"
        android:id="@+id/multiplyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x" />
</androidx.constraintlayout.widget.ConstraintLayout>