<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/guide_left"
        app:layout_constraintGuide_begin="20dp"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/guide_right"
        app:layout_constraintGuide_end="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:id="@+id/nombre1parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_left"
        app:layout_constraintEnd_toEndOf="@id/guide_right"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombre1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/entrez_votre_texte"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/nombre2parent"
        app:layout_constraintStart_toStartOf="@id/guide_left"
        app:layout_constraintEnd_toEndOf="@id/guide_right"
        app:layout_constraintTop_toBottomOf="@+id/nombre1parent"
        android:layout_marginTop="10pt"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombre2"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/entrez_votre_texte2">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calcul"
        android:textSize="16sp"
        android:layout_marginTop="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        app:layout_constraintTop_toBottomOf="@+id/nombre2parent"
        app:strokeColor="@color/design_default_color_primary_dark"
        app:rippleColor="@color/design_default_color_primary_dark"
        android:text="@string/calcul">

    </com.google.android.material.button.MaterialButton>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/guide_right"
        app:layout_constraintStart_toStartOf="@id/guide_left"
        app:layout_constraintTop_toBottomOf="@id/calcul"
        
/>

</androidx.constraintlayout.widget.ConstraintLayout>